# RealTime-ML-Trading-System

./: .gitignore  README.md  redpanda.yml
docker-compose/: Makefile  backfill_pipeline.yml  feature_pipeline.yml
services/price_predictor/: comet.credentials.sample.env  hopsworks.credentials.sample.env  pyproject.toml
services/price_predictor/src/: config.py  ohlc_data_reader.py  training.py
services/price_predictor/src/models/: current_price_baseline.py
services/topic_to_feature_store/: Dockerfile  Makefile  pyproject.toml
services/topic_to_feature_store/src/: config.py  hopsworks_api.py  main.py
services/trade_producer/: Dockerfile  Makefile  pyproject.toml
services/trade_producer/src/: config.py  kraken_websocket_api.py  main.py
services/trade_producer/src/trade_data_source/: base.py  kraken_rest_api.py  kraken_websocket_api.py  trade.py
services/trade_to_ohlc/: Makefile  pyproject.toml
services/trade_to_ohlc/src/: config.py  main.py
