[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["deepsuchak <suchakdeep@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
quixstreams = "^3.1.0"
loguru = "^0.7.2"
pydantic-settings = "^2.6.1"
hopsworks = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
