[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["deepsuchak <suchakdeep@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
loguru = "^0.7.2"
confluent-kafka = "2.4.0"
quixstreams = "2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
